1단계 - 질문 삭제하기 기능 리팩토링 (#923)
* feat. qna 리팩토링

* feat. 리뷰 반영: validate로 메서드 명 변경

* feat. 리뷰 반영: 객체이름 deletedHistories로 변경

* feat. 리뷰 반영: answered delete history 수정

* feat. 리뷰 반영: verifyDeleteHistories() 메서드를 사용하기 위한 메서드 변경

Co-authored-by: celine.kk <celine.kk@kakaocorp.com>